# simple-equ

./: CONTRIBUTING.md  README.md  algebra.py  geometry.py  pyproject.toml  setup.py
.github/workflows/: publish.yml  release.yml  wheels.yml
simple_equ/cs/: algorithms.py  locating.py  searching.py  sorting.py
simple_equ/economics/: statistics.py
simple_equ/geometry/: trigonometry.py
simple_equ/math/: algebra.py  geometry.py
simple_equ/math_general/: algebra.py  cmath.py  geometry.py
simple_equ/physics/: __init__.py  constants.py  temperature.py  units.py
simple_equ/statistics/: constants.py  statistics.py
tests/: test_cs.py  test_geometry.py
tests/cs/: test_cs.py
tests/geometry/: test_geometry.py
tests/physics/: test_temperature.py
tests/statistics/: test_statistics.py
