[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple_equ"
version = "1.0.12"
description = "An open source library containing multiple known STEM equations in a functional form."
readme = "README.md"
authors = [
  { name="antfullstack" }
]
license = { file="LICENSE" }
requires-python = ">=3.8"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]